--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
 
 <script>
-const WORKER_URL = 'https://your-worker.your-username.workers.dev'; 
+const WORKER_URL = 'https://dark-disk-7042.yanfei6868.workers.dev'; 
 
 // 【修复 4】：ChangeNOW 默认适配器修复：使用固定估算和 rate 模式
 let adapters = [
