--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
 
 <script>
-const WORKER_URL = 'https://your-worker.your-username.workers.dev'; 
+const WORKER_URL = 'https://misty-boat-a6c5.yanfei6868.workers.dev'; 
 
 // 【修复 4】：ChangeNOW 默认适配器修复：使用固定估算和 rate 模式
 // 原始硬编码的两个 ChangeNOW 适配器已根据用户请求删除，adapters 初始化为空数组
