--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
 
 <script>
-const WORKER_URL = 'https://your-worker.your-username.workers.dev'; 
+const WORKER_URL = 'https://misty-boat-a6c5.yanfei6868.workers.dev'; 
 
 // 【修改 1】：硬编码已删除
 let adapters = []; 
