--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
 
 <script>
-const WORKER_URL = 'https://your-worker.your-username.workers.dev'; 
+const WORKER_URL = 'https://blue-band-d76d.yanfei6868.workers.dev'; 
 
 // **【变量名修改】：adapters -> currentAdapters，以匹配导入逻辑**
 let currentAdapters = []; 
