--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ th,td{border-bottom:1px solid #ddd;padding:8px;text-align:left}
 
 <script>
 /* ---------- 配置 ---------- */
-const WORKER_URL = 'https://holy-salad-8825.yanfei6868.workers.dev';
+const WORKER_URL = 'https://old-term-8e0b.yanfei6868.workers.dev';
 let currentAdapters = [], queryPair = {}, lastResults = null, visibleAdapterIndex = 'all';
 
 /* ---------- 工具 ---------- */
