--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ th{background:#f8f9fa;font-weight:600}
 
 <script>
 /* ---------- 配置 ---------- */
-const WORKER_URL = 'https://your-worker.your-username.workers.dev'; // 请修改为实际Worker地址
+const WORKER_URL = 'https://winter-dust-5610.yanfei6868.workers.dev'; // 请修改为实际Worker地址
 let currentAdapters = [], queryPair = {}, lastResults = null, visibleAdapterIndex = 'all';
 
 /* ---------- 工具函数 ---------- */
