--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ th,td{border-bottom:1px solid #ddd;padding:8px;text-align:left}
 
 <script>
 /* ---------- 配置 ---------- */
-const WORKER_URL = 'https://your-worker.your-username.workers.dev';
+const WORKER_URL = 'https://small-rain-86c6.yanfei6868.workers.dev';
 let currentAdapters = [], queryPair = {}, lastResults = null, visibleAdapterIndex = 'all';
 
 /* ---------- 工具 ---------- */
