--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 <script>
 // ==================== 请在此处修改你的 Worker 地址 ====================
-const WORKER_URL = 'https://dawn-sun-abea.yanfei6868.workers.dev'; 
+const WORKER_URL = 'https://bold-rice-45ae.yanfei6868.workers.dev'; 
 // ==================================================================
 
 let adapters = [];
