--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@ th,td{border-bottom:1px solid #ddd;padding:8px;text-align:left}
 
 <script>
 /* ---------- 配置 ---------- */
-const WORKER_URL = 'https://your-worker.your-username.workers.dev';
-let currentAdapters = [], queryPair = {}, lastResults = null, visibleAdapterIndex = 'all';
+const WORKER_URL = 'https://odd-union-3737.yanfei6868.workers.dev';
+https://odd-union-3737.yanfei6868.workers.dev/let currentAdapters = [], queryPair = {}, lastResults = null, visibleAdapterIndex = 'all';
 
 /* ---------- 工具 ---------- */
 const escapeHtml = s => s == null ? '' : String(s).replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;').replace(/"/g,'&quot;');
