--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ th,td{border-bottom:1px solid #ddd;padding:8px;text-align:left}
 
 <script>
 /* ---------- 配置 ---------- */
-const WORKER_URL = 'https://odd-union-3737.yanfei6868.workers.dev';
+const WORKER_URL = 'https://soft-mode-42ba.yanfei6868.workers.dev';
 https://odd-union-3737.yanfei6868.workers.dev/let currentAdapters = [], queryPair = {}, lastResults = null, visibleAdapterIndex = 'all';
 
 /* ---------- 工具 ---------- */
