--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ th,td{border-bottom:1px solid #ddd;padding:8px;text-align:left}
 
 <script>
 /* ---------- 配置 ---------- */
-const WORKER_URL = 'https://odd-surf-25d4.yanfei6868.workers.dev';
+const WORKER_URL = 'https://winter-moon-29d3.yanfei6868.workers.dev';
 let currentAdapters = [], queryPair = {}, lastResults = null, visibleAdapterIndex = 'all';
 
 /* ---------- 工具 ---------- */
